# ext-trait.rs

./: Cargo.toml  README.md  cargo_publish.sh  change_version.sh  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
extension-traits/: Cargo.toml  README.md  gen_readme.sh
extension-traits/src/: lib.rs
src/: compile_fail_tests.md  lib.rs
src/proc_macros/: Cargo.toml  mod.rs
tests/: compiles_fine.rs
